welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:13: error: Unmatched closing brace '}' ignored here
 }
 ^